--- a/style.css
+++ b/style.css
@@ -3,7 +3,22 @@
   justify-content: center;
 }
 .btn {
-  padding-left: 25px;
-  padding-right: 25px;
-  margin-right: 10px;
+  font-weight: 700;
+  color: white;
+  text-decoration: none;
+  padding: 0.8em 1em calc(0.8em + 3px);
+  border-radius: 3px;
+  background: rgb(64, 199, 129);
+  box-shadow: 0 -3px rgb(53, 167, 110) inset;
+  transition: 0.2s;
+}
+.btn:hover {
+  background: rgb(53, 167, 110);
+}
+.btn:active {
+  background: rgb(33, 147, 90);
+  box-shadow: 0 3px rgb(33, 147, 90) inset;
+}
+.btn:not(:last-child) {
+  margin-right: 50px;
 }
